--- a/SuperMercado/SuperMercado.csproj
+++ b/SuperMercado/SuperMercado.csproj
@@ -84,6 +84,12 @@
     <Compile Include="RegistrarUs.Designer.cs">
       <DependentUpon>RegistrarUs.cs</DependentUpon>
     </Compile>
+    <Compile Include="SmsCompra.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SmsCompra.Designer.cs">
+      <DependentUpon>SmsCompra.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Administrador.resx">
       <DependentUpon>Administrador.cs</DependentUpon>
     </EmbeddedResource>
@@ -110,6 +116,9 @@
     </Compile>
     <EmbeddedResource Include="RegistrarUs.resx">
       <DependentUpon>RegistrarUs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SmsCompra.resx">
+      <DependentUpon>SmsCompra.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
