--- a/CapaRNegocio/CapaRNegocio.csproj
+++ b/CapaRNegocio/CapaRNegocio.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D40A6C8A-8696-47FD-83C2-F40B1C618897}</ProjectGuid>
+    <ProjectGuid>{B205467B-215A-425C-A110-C2214FC1F63F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>SuperMercado</RootNamespace>
-    <AssemblyName>SuperMercado</AssemblyName>
+    <RootNamespace>CapaRNegocio</RootNamespace>
+    <AssemblyName>CapaRNegocio</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,71 +46,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Administrador.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Administrador.Designer.cs">
-      <DependentUpon>Administrador.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Dashboard.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Dashboard.Designer.cs">
-      <DependentUpon>Dashboard.cs</DependentUpon>
-    </Compile>
-    <Compile Include="DetalleCompra.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="DetalleCompra.Designer.cs">
-      <DependentUpon>DetalleCompra.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="InicioUs.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="InicioUs.Designer.cs">
-      <DependentUpon>InicioUs.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
+    <Compile Include="CRN_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RegistrarUs.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="RegistrarUs.Designer.cs">
-      <DependentUpon>RegistrarUs.cs</DependentUpon>
-    </Compile>
-    <Compile Include="SmsCompra.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="SmsCompra.Designer.cs">
-      <DependentUpon>SmsCompra.cs</DependentUpon>
-    </Compile>
-    <Compile Include="UsuariosAdm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="UsuariosAdm.Designer.cs">
-      <DependentUpon>UsuariosAdm.cs</DependentUpon>
-    </Compile>
-    <EmbeddedResource Include="Administrador.resx">
-      <DependentUpon>Administrador.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Dashboard.resx">
-      <DependentUpon>Dashboard.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="DetalleCompra.resx">
-      <DependentUpon>DetalleCompra.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="InicioUs.resx">
-      <DependentUpon>InicioUs.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -120,15 +57,6 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <EmbeddedResource Include="RegistrarUs.resx">
-      <DependentUpon>RegistrarUs.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="SmsCompra.resx">
-      <DependentUpon>SmsCompra.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="UsuariosAdm.resx">
-      <DependentUpon>UsuariosAdm.cs</DependentUpon>
-    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -140,12 +68,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\CapaRNegocio\CapaRNegocio.csproj">
-      <Project>{b205467b-215a-425c-a110-c2214fc1f63f}</Project>
-      <Name>CapaRNegocio</Name>
+    <ProjectReference Include="..\CapaDatos\CapaDatos.csproj">
+      <Project>{5034838a-10d3-475a-a2fa-074634f035a1}</Project>
+      <Name>CapaDatos</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
