--- a/SuperMercado/SuperMercado.csproj
+++ b/SuperMercado/SuperMercado.csproj
@@ -52,6 +52,12 @@
     <Compile Include="Administrador.Designer.cs">
       <DependentUpon>Administrador.cs</DependentUpon>
     </Compile>
+    <Compile Include="CategoriaProdAdm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CategoriaProdAdm.Designer.cs">
+      <DependentUpon>CategoriaProdAdm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Dashboard.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -76,8 +82,20 @@
     <Compile Include="InicioUs.Designer.cs">
       <DependentUpon>InicioUs.cs</DependentUpon>
     </Compile>
+    <Compile Include="MarcaAdm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MarcaAdm.Designer.cs">
+      <DependentUpon>MarcaAdm.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProveedoresAdm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProveedoresAdm.Designer.cs">
+      <DependentUpon>ProveedoresAdm.cs</DependentUpon>
+    </Compile>
     <Compile Include="RegistrarUs.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -105,6 +123,9 @@
     <EmbeddedResource Include="Administrador.resx">
       <DependentUpon>Administrador.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="CategoriaProdAdm.resx">
+      <DependentUpon>CategoriaProdAdm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Dashboard.resx">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,6 +138,9 @@
     <EmbeddedResource Include="InicioUs.resx">
       <DependentUpon>InicioUs.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MarcaAdm.resx">
+      <DependentUpon>MarcaAdm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -126,6 +150,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="ProveedoresAdm.resx">
+      <DependentUpon>ProveedoresAdm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="RegistrarUs.resx">
       <DependentUpon>RegistrarUs.cs</DependentUpon>
     </EmbeddedResource>
