--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CD_Categorias.cs" />
     <Compile Include="CD_Conexion.cs" />
     <Compile Include="CD_TipoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
