--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CD_Categorias.cs" />
     <Compile Include="CD_Conexion.cs" />
+    <Compile Include="CD_Proveedores.cs" />
     <Compile Include="CD_TipoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
