--- a/CapaRNegocio/CapaRNegocio.csproj
+++ b/CapaRNegocio/CapaRNegocio.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CN_Categorias.cs" />
+    <Compile Include="CN_Proveedores.cs" />
     <Compile Include="CN_TipoUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
