--- a/CapaRNegocio/CapaRNegocio.csproj
+++ b/CapaRNegocio/CapaRNegocio.csproj
@@ -42,8 +42,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CN_Categorias.cs" />
+    <Compile Include="CN_Marca.cs" />
     <Compile Include="CN_Proveedores.cs" />
     <Compile Include="CN_TipoUsuario.cs" />
+    <Compile Include="CN_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
