--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CD_Categorias.cs" />
     <Compile Include="CD_Conexion.cs" />
     <Compile Include="CD_Marca.cs" />
+    <Compile Include="CD_Productos.cs" />
     <Compile Include="CD_Proveedores.cs" />
     <Compile Include="CD_TipoUsuario.cs" />
     <Compile Include="CD_Usuarios.cs" />
