--- a/CapaRNegocio/CapaRNegocio.csproj
+++ b/CapaRNegocio/CapaRNegocio.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="CN_Categorias.cs" />
     <Compile Include="CN_Marca.cs" />
+    <Compile Include="CN_Productos.cs" />
     <Compile Include="CN_Proveedores.cs" />
     <Compile Include="CN_TipoUsuario.cs" />
     <Compile Include="CN_Usuarios.cs" />
