--- a/SuperMercado/SuperMercado.csproj
+++ b/SuperMercado/SuperMercado.csproj
@@ -88,6 +88,12 @@
     <Compile Include="MarcaAdm.Designer.cs">
       <DependentUpon>MarcaAdm.cs</DependentUpon>
     </Compile>
+    <Compile Include="ProductosUS.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProductosUS.Designer.cs">
+      <DependentUpon>ProductosUS.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedoresAdm.cs">
@@ -140,6 +146,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MarcaAdm.resx">
       <DependentUpon>MarcaAdm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ProductosUS.resx">
+      <DependentUpon>ProductosUS.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
