--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="CD_Categorias.cs" />
     <Compile Include="CD_Conexion.cs" />
+    <Compile Include="CD_DetVenta.cs" />
     <Compile Include="CD_Marca.cs" />
     <Compile Include="CD_Productos.cs" />
     <Compile Include="CD_TipoUsuario.cs" />
