--- a/SuperMercado/SuperMercado.csproj
+++ b/SuperMercado/SuperMercado.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.VisualStudio.Data.Providers.SqlServer">
+      <HintPath>..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio\2019\Community\Common7\IDE\Microsoft.VisualStudio.Data.Providers.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data.Linq" />
@@ -65,11 +68,6 @@
     <Compile Include="Dashboard.Designer.cs">
       <DependentUpon>Dashboard.cs</DependentUpon>
     </Compile>
-    <Compile Include="DataClasses1.designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </Compile>
     <Compile Include="DetalleCompra.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,12 +79,6 @@
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
-    <Compile Include="ListaProductos.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="ListaProductos.Designer.cs">
-      <DependentUpon>ListaProductos.cs</DependentUpon>
     </Compile>
     <Compile Include="MarcaAdm.cs">
       <SubType>Form</SubType>
@@ -141,9 +133,6 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ListaProductos.resx">
-      <DependentUpon>ListaProductos.cs</DependentUpon>
-    </EmbeddedResource>
     <EmbeddedResource Include="MarcaAdm.resx">
       <DependentUpon>MarcaAdm.cs</DependentUpon>
     </EmbeddedResource>
@@ -171,14 +160,6 @@
     <EmbeddedResource Include="UsuariosAdm.resx">
       <DependentUpon>UsuariosAdm.cs</DependentUpon>
     </EmbeddedResource>
-    <None Include="DataClasses1.dbml">
-      <Generator>MSLinqToSQLGenerator</Generator>
-      <LastGenOutput>DataClasses1.designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="DataClasses1.dbml.layout">
-      <DependentUpon>DataClasses1.dbml</DependentUpon>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
