--- a/CapaDatos/CapaDatos.csproj
+++ b/CapaDatos/CapaDatos.csproj
@@ -47,6 +47,7 @@
     <Compile Include="CD_DetVenta.cs" />
     <Compile Include="CD_Marca.cs" />
     <Compile Include="CD_Productos.cs" />
+    <Compile Include="CD_Prueba.cs" />
     <Compile Include="CD_TipoUsuario.cs" />
     <Compile Include="CD_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
