--- a/CapaRNegocio/CapaRNegocio.csproj
+++ b/CapaRNegocio/CapaRNegocio.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CN_DetVenta.cs" />
     <Compile Include="CN_Marca.cs" />
     <Compile Include="CN_Productos.cs" />
+    <Compile Include="CN_Prueba.cs" />
     <Compile Include="CN_TipoUsuario.cs" />
     <Compile Include="CN_Usuarios.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
